# pypillar

./: .gitignore  README.md  README.rst  setup.cfg
example/: ansible.cfg  hosts  site.yml
example/pillar/: stage.yml
example/roles/test/tasks/: main.yml
pypillar/: __init__.py
pypillar/modules/: pillar.py
pypillar/plugins/actions/: pillar.py
pypillar/plugins/caches/: jsonfile_pillar.py
pypillar/plugins/modules/: get_host.py  get_setting.py
pypillar/plugins/vars/: pillar.py
pypillar/utils/: get_host.py  get_setting.py
utils/: __init__.py
